# debezium

./: .collections.json  .gitattributes  .gitignore  .java-version  .packit.yaml  .travis.yml  1  AGENTS.md  AI_USAGE_POLICY.md  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  COPYRIGHT.txt  DDD-53-OUTBOX-POLL-PROPOSAL.md  DOCUMENTATION.md  Dockerfile  Dockerfile.stripe  GITHUB_ACTIONS.md  Jenkinsfile  LICENSE-3rd-PARTIES.txt  README-project.md  README.md  README_JA.md  README_KO.md  README_ZH.md  RELEASING.md  SECURITY.md  WORKSPACE  all-shards.txt  checkstyle.sh  cloudbuild-commit.yaml  cloudbuild-snapshot.yaml  context7.json  debezium.ocp.env  ekhan.html  jenkins-build.sh  local.collections.json  log4j.properties  matt_build.sh  metadata.yaml  (+6 more)
debezium-core/: BUILD.bazel  build.gradle.kts  pom.xml
debezium-core/src/main/java/io/debezium/annotation/: GuardedBy.java  Immutable.java  Incubating.java  JavaServiceLoadable.java  NotThreadSafe.java  ReadOnly.java  SingleThreadAccess.java  ThreadSafe.java  VisibleForTesting.java
debezium-core/src/main/java/io/debezium/bean/: DefaultBeanRegistry.java  StandardBeanNames.java
debezium-core/src/main/java/io/debezium/cloudevents/: CloudEventsConverter.java  CloudEventsConverterConfig.java  CloudEventsMaker.java  RecordParser.java  (+1 more)
debezium-core/src/test/resources/: debezium_signaling_file.signals.txt  log4j.properties  logback-test.xml
debezium-core/src/test/resources/json/: response2.json  sample1.json  sample2.json  serde-unknown-property.json  serde-update.json  serde-with-schema.json  serde-without-schema.json
(+8190 files in other folders)
